<resources>
    <string name="app_name">Elevador</string>
    <string name="pessoas_no_elevador">pessoas no elevador</string>
    <string name="entrar">entrar</string>
    <string name="andar_selecionado">IR PARA O ANDAR SELECIONADO</string>
    <string name="sair">sair</string>
    <string name="voce_esta_no">Você está no...</string>
    <string name="alguem_ira">Alguem irá...</string>
    <string name="digite_um_andar">Digite um andar</string>
    <string name="quinto">5º</string>
    <string name="nomeAndar">andar</string>
    <string name="_2_5">2/5</string>
    <string name="pesoas_no_n_elevador">pesoas no \n elevador</string>
    <string name="simbolo_grau_elevador">%s º</string>
    <string name="andar_invalido">Andar Inválido!</string>
    <string name="status_andar">%s /5</string>
    <string name="elevador_lotado">Não cabem mais pessoas no elevador!</string>
    <string name="elevador_vazio">Não tem mais ninguém no elevador!</string>

</resources>